minor layout changes

--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@ function myContrFunction() {
 
 <hr/>
 
-<p>We hope you agree that one's native tongue is the sweetest of all languages on earth? Come, then, and listen to a story in a native language of the Indian subcontinent.</p>
+<p>Is not one's native tongue is the sweetest of all languages on earth? Come, then, and listen to a story in a native language of the Indian subcontinent.</p>
 
-<p>Every Thursday, we upload an audio story written and narrated by ordinary people living ordinary lives but watching Life as it tells them stories. This earthiness of amateur voices, thinking and narrating in their mother tongues, is something that we hope will prevent us from being de-racinated. Occasionally, we also capture the street cries of India and share them as quick bytes.</p>
+<p>Every Thursday, we upload an audio story written and narrated by ordinary people living ordinary lives but watching Life as it tells them stories. This earthiness of amateur voices, thinking and speaking in their mother tongues, is something that we hope will prevent us from being de-racinated.</p>
+
+<p> Occasionally, we also capture the street cries of India and share them as quick bytes.</p>
 
 <hr/>
 
@@ -58,8 +60,8 @@ function myContrFunction() {
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
 <h3 class = "w3-border-bottom">Musafir</h3>
-  <p class = "w3-padding"><img src="./images/sa_small.png" class="w3-circle border" style = "float:right"/><audio src = "./mp3/sa_musafir.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
   <p class="w3-text-grey w3-small">Kashmiri/Koshur, 17 Mar 2016</p>
+  <p class = "w3-padding-tiny"><img src="./images/sa_small.png" class="w3-circle border"/> <audio src = "./mp3/sa_musafir.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
 <h3 class = "w3-border-top">Syed Aatirah</h3>
 </div> 
 </div>
@@ -69,8 +71,8 @@ function myContrFunction() {
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
 <h3 class = "w3-border-bottom">Beti ka byaah</h3>
-  <p class = "w3-padding"><img src="./images/rs_small.png" class="w3-circle border" style = "float:right"/><audio src = "./mp3/rs_byah.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
   <p class="w3-text-grey w3-small">Hindi, 10 Mar 2016</p>
+  <p class = "w3-padding-tiny"><img src="./images/rs_small.png" class="w3-circle border"/> <audio src = "./mp3/rs_byah.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
 <h3 class = "w3-border-top">Rahul Shabd</h3>
 </div> 
 </div>
@@ -85,9 +87,9 @@ function myContrFunction() {
 <a name = "more"></a>
 <h2>More podcasts</h2>
 
-<p class = "w3-small">Click on an author or language to see a list of podcasts by that author or in that language.</p>
+<p class = "w3-tiny">Click the storyteller pictures or language buttons for more podcasts.</p>
 
-<h3>Author-narrators</h3>
+<h3>Storytellers</h3>
 
 <div id = "authors" class = "w3-container">
 
