fixing an image src

--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -50,7 +50,7 @@ $(function(){
   <td><p><audio src = "../mp3/rr_darakht.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 <tr>
-  <td><p><img src="../images/ab_tiny.PNG" class="w3-circle borderwhite" alt="Anindita Basu"/>&nbsp;&nbsp;Tulsi ka ped (Anindita Basu)</p></td>
+  <td><p><img src="../images/ab_tiny.png" class="w3-circle borderwhite" alt="Anindita Basu"/>&nbsp;&nbsp;Tulsi ka ped (Anindita Basu)</p></td>
   <td><p><audio src = "../mp3/ab_tulsi.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 <tr>
@@ -66,7 +66,7 @@ $(function(){
   <td><p><audio src = "../mp3/rs_rachna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 <tr>
-  <td><p><img src="../images/ab_tiny.PNG" class="w3-circle borderwhite" alt="Anindita Basu"/>&nbsp;&nbsp;Kallo rani (Anindita Basu)</p></td>
+  <td><p><img src="../images/ab_tiny.png" class="w3-circle borderwhite" alt="Anindita Basu"/>&nbsp;&nbsp;Kallo rani (Anindita Basu)</p></td>
   <td><p><audio src = "../mp3/ab_kallorani.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 <tr>
