SP2 pics and bio

--- a/html/author_sp2.html
+++ b/html/author_sp2.html
@@ -32,7 +32,7 @@ $(function(){
 
 <header class = "w3-padding"><h2>Shankhadip Paria</h2></header>
 
-<p><img src="../images/ic_person_black_48dp_2x.png" class="w3-circle border"/>&nbsp;</p>
+<p><img src="../images/sp2.png" class="w3-circle border"/>Shankhadip Paria lives in Contai, near the sea town of Digha in West Bengal. He likes books, travelling, foods, friends, pirate legends, and Sundays. Shankhadip writes blog posts in Bengali once in a blue moon and, strongly believing that these posts are not the worst ones around, puts them up on his blog at <a href = "https://udorpindi.wordpress.com/" target = "_blank">https://udorpindi.wordpress.com/</a>. He is really excited about Afsana Podcast and hopes it will meet great success in the coming days.</p>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
