--- a/html/language_bengali.html
+++ b/html/language_bengali.html
@@ -42,7 +42,7 @@ $(function(){
   <td><p>&nbsp;</p></td>
 </tr>
 <tr>
-  <td><p><img src="../images/ic_person_black_48dp_2x_tiny.png" class="w3-circle borderwhite" alt="Shankhadip Paria"/>&nbsp;&nbsp;Biye barir byakaran (Shankhadip Paria)</p></td>
+  <td><p><img src="../images/sp2_tiny.png" class="w3-circle borderwhite" alt="Shankhadip Paria"/>&nbsp;&nbsp;Biye barir byakaran (Shankhadip Paria)</p></td>
   <td><p><audio src = "../mp3/sp2_byakaran.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
 </table>
