updating for badchalan

--- a/html/header.html
+++ b/html/header.html
@@ -35,6 +35,7 @@
 <button onclick="myAuthFunction()" class = "w3-btn w3-round-jumbo w3-white border">Authors</button>
 	<span id = "authors" class="w3-dropdown-content w3-card-2 w3-round-large w3-text-grey" style="width:175px">
       <a href="author_ab.html">Anindita Basu</a>
+	  <a href="author_mk.html">Mohammad Kausen</a>
       <a href="author_pk.html">Preran Kumar</a>
       <a href="author_rs.html">Rahul Shabd</a>
       <a href="author_rr.html">Ruchi Rana</a>
