--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -81,6 +81,10 @@ $(function(){
   <td><p><img src="../images/rr_tiny.png" class="w3-circle borderwhite" alt="Ruchi Rana"/>&nbsp;&nbsp;Amit chhaap (Ruchi Rana)</p></td>
   <td><p><audio src = "../mp3/rr_phagun.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
 </tr>
+<tr>
+  <td><p><img src="../images/mk_tiny.png" class="w3-circle borderwhite" alt="Mohammad Kausen"/>&nbsp;&nbsp;Badchalan (Mohammad Kausen)</p></td>
+  <td><p><audio src = "../mp3/mk_badchalan.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
+</tr>
 </table>
 </div>
 
