--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@ function myContrFunction() {
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h3 class = "w3-border-bottom">Amit chhaap</h3>
-  <p class="w3-text-grey w3-small">Hindi, 22 Mar 2016</p>
-  <p class = "w3-padding-tiny"><img src="./images/rr_small.png" class="w3-circle border"/> <audio src = "./mp3/rr_phagun.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-<h3 class = "w3-border-top">Ruchi Rana</h3>
+<h3 class = "w3-border-bottom">Badchalan</h3>
+  <p class="w3-text-grey w3-small">Hindi, 24 Mar 2016</p>
+  <p class = "w3-padding-tiny"><img src="./images/mk_small.png" class="w3-circle border"/> <audio src = "./mp3/mk_badchalan.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+<h3 class = "w3-border-top">Mohammad Kausen</h3>
 </div> 
 </div>
 </div>
@@ -70,10 +70,10 @@ function myContrFunction() {
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h3 class = "w3-border-bottom">Musafir</h3>
-  <p class="w3-text-grey w3-small">Kashmiri/Koshur, 17 Mar 2016</p>
-  <p class = "w3-padding-tiny"><img src="./images/sa_small.png" class="w3-circle border"/> <audio src = "./mp3/sa_musafir.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-<h3 class = "w3-border-top">Syed Aatirah</h3>
+<h3 class = "w3-border-bottom">Amit chhaap</h3>
+  <p class="w3-text-grey w3-small">Hindi, 22 Mar 2016</p>
+  <p class = "w3-padding-tiny"><img src="./images/rr_small.png" class="w3-circle border"/> <audio src = "./mp3/rr_phagun.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+<h3 class = "w3-border-top">Ruchi Rana</h3>
 </div> 
 </div>
 </div>
@@ -139,6 +139,13 @@ function myContrFunction() {
 <a href = "./html/author_sa.html" title = "Podcasts by Syed Aatirah" class = "anoline">
 <p>Syed Aatirah</p>
 <img src="./images/sa_small.png" class="w3-circle borderwhite" alt="Syed Aatirah"/>
+</a>
+</div>
+
+<div class="authorcard w3-center w3-round-large">
+<a href = "./html/author_mk.html" title = "Podcasts by Mohammad Kausen" class = "anoline">
+<p>Mohd Kausen</p>
+<img src="./images/mk_small.png" class="w3-circle borderwhite" alt="Mohammad Kausen"/>
 </a>
 </div>
 
