link rel canonical for https

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
+<link rel="canonical" href="https://afsanapodcast.github.io/afsana/" />
+
 </head>
 
 <body class = "w3-theme-l4">
@@ -46,7 +48,7 @@ function myContrFunction() {
 
 <hr/>
 
-<p>Is not one's native tongue is the sweetest of all languages on earth? Come, then, and listen to a story in a native language of the Indian subcontinent.</p>
+<p>Is not one's native tongue is the sweetest of all languages on earth? Come, then, and listen to a story in a native language &mdash; your language &mdash; of India.</p>
 
 <p>Every Thursday, we upload an audio story written and narrated by ordinary people living ordinary lives but watching Life as it tells them stories. This earthiness of amateur voices, thinking and speaking in their mother tongues, is something that we hope will prevent us from being de-racinated.</p>
 
@@ -181,7 +183,7 @@ function myContrFunction() {
       <div class="w3-container">        
 		<p class = "w3-text-grey w3-small">All stories are original works of the authors. The copyright thereof vests with them.</p>
 		<p class = "w3-text-grey w3-small">The website uses css files from <a href = "http://www.w3schools.com/w3css/default.asp" target = "_blank">http://www.w3schools.com/w3css/default.asp</a>. These files are free to use and no license attribution is required; however, it is only fair that the source be acknowledged.</p>
-		<p class = "w3-text-grey w3-small">The logo, favicon, and icons are from Google's material icons library and is used here under Google's <a href = "https://creativecommons.org/licenses/by/4.0/" target = "_blank">CC-BY license</a>.</p>
+		<p class = "w3-text-grey w3-small">The logo, favicon, and icons are from Google's material icons library and are used here under Google's <a href = "https://creativecommons.org/licenses/by/4.0/" target = "_blank">CC-BY license</a>.</p>
 		<p class = "w3-text-grey w3-small">The sitemap for this website was generated at <a href="https://XmlSitemapGenerator.org" target="_blank" title="Free Google XML Sitemap Generator">HTML and Google Xml Sitemap Generator</a>.</p>
       </div>
       <footer class="w3-container w3-theme-l4">
