--- a/Sitemap.htm
+++ b/Sitemap.htm
@@ -39,19 +39,21 @@
 <div id="xsgBody">
 
 
-<ul><li><a href="http://afsanapodcast.github.io/afsana/"><span class="title">Afsana Podcast</span></a>
-<ul><li><a href="http://afsanapodcast.github.io/afsana/html/author_pk.html"><span class="title">Preran Kumar</span></a>
-</li><li><a href="http://afsanapodcast.github.io/afsana/html/author_ab.html"><span class="title">Anindita Basu</span></a>
-</li><li><a href="http://afsanapodcast.github.io/afsana/html/author_rr.html"><span class="title">Ruchi Rana</span></a>
-</li><li><a href="http://afsanapodcast.github.io/afsana/html/author_ss.html"><span class="title">Shishir Somvanshi</span></a>
-</li><li><a href="http://afsanapodcast.github.io/afsana/html/author_rs.html"><span class="title">Rahul Shabd</span></a>
-</li><li><a href="http://afsanapodcast.github.io/afsana/html/author_sr.html"><span class="title">Sandhya Rathore</span></a>
-</li><li><a href="http://afsanapodcast.github.io/afsana/html/author_sa.html"><span class="title">Syed Aatirah</span></a>
-</li><li><a href="http://afsanapodcast.github.io/afsana/html/author_mk.html"><span class="title">Mohammad Kausen</span></a>
-</li><li><a href="http://afsanapodcast.github.io/afsana/html/author_ap.html"><span class="title">Ajay Purohit</span></a>
-</li><li><a href="http://afsanapodcast.github.io/afsana/html/author_anon.html"><span class="title">Street sounds</span></a>
-</li><li><a href="http://afsanapodcast.github.io/afsana/html/language_hindi.html"><span class="title">Hindi stories</span></a>
-</li><li><a href="http://afsanapodcast.github.io/afsana/html/language_kashmiri.html"><span class="title">Kashmiri stories</span></a>
+<ul><li><a href="https://afsanapodcast.github.io/afsana/"><span class="title">Afsana Podcast</span></a>
+<ul><li><a href="https://afsanapodcast.github.io/afsana/html/author_pk.html"><span class="title">Preran Kumar</span></a>
+</li><li><a href="https://afsanapodcast.github.io/afsana/html/author_ab.html"><span class="title">Anindita Basu</span></a>
+</li><li><a href="https://afsanapodcast.github.io/afsana/html/author_rr.html"><span class="title">Ruchi Rana</span></a>
+</li><li><a href="https://afsanapodcast.github.io/afsana/html/author_ss.html"><span class="title">Shishir Somvanshi</span></a>
+</li><li><a href="https://afsanapodcast.github.io/afsana/html/author_rs.html"><span class="title">Rahul Shabd</span></a>
+</li><li><a href="https://afsanapodcast.github.io/afsana/html/author_sr.html"><span class="title">Sandhya Rathore</span></a>
+</li><li><a href="https://afsanapodcast.github.io/afsana/html/author_sa.html"><span class="title">Syed Aatirah</span></a>
+</li><li><a href="https://afsanapodcast.github.io/afsana/html/author_mk.html"><span class="title">Mohammad Kausen</span></a>
+</li><li><a href="https://afsanapodcast.github.io/afsana/html/author_ap.html"><span class="title">Ajay Purohit</span></a>
+</li><li><a href="https://afsanapodcast.github.io/afsana/html/author_anon.html"><span class="title">Street sounds</span></a>
+</li><li><a href="https://afsanapodcast.github.io/afsana/html/language_hindi.html"><span class="title">Hindi stories</span></a>
+</li><li><a href="https://afsanapodcast.github.io/afsana/html/language_kashmiri.html"><span class="title">Kashmiri stories</span></a>
+</li><li><a href="https://afsanapodcast.github.io/afsana/html/instructions.html"><span class="title">Podcast instructions</span></a>
+</li><li><a href="https://afsanapodcast.github.io/afsana/html/instructions_quickBytes.html"><span class="title">Quick Bytes instructions</span></a>
 </li></ul></li></ul><!--<guid value="978d1735-297f-425a-b9c0-58b7837953fd" />--><!--Created using XmlSitemapGenerator.org - Free HTML, RSS and XML sitemap generator-->
 
 
