--- a/html/author_rs.html
+++ b/html/author_rs.html
@@ -14,6 +14,8 @@
 
 <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
 
+<link rel="canonical" href="https://afsanapodcast.github.io/afsana/html/author_rs.html" />
+
 <script src="//code.jquery.com/jquery-1.10.2.js"></script>
 <script> 
 $(function(){
