sitemap in footer

--- a/Sitemap.htm
+++ b/Sitemap.htm
@@ -39,22 +39,40 @@
 <div id="xsgBody">
 
 
-<ul><li><a href="https://afsanapodcast.github.io/afsana/"><span class="title">Afsana Podcast</span></a>
-<ul><li><a href="https://afsanapodcast.github.io/afsana/html/author_pk.html"><span class="title">Preran Kumar</span></a>
-</li><li><a href="https://afsanapodcast.github.io/afsana/html/author_ab.html"><span class="title">Anindita Basu</span></a>
-</li><li><a href="https://afsanapodcast.github.io/afsana/html/author_rr.html"><span class="title">Ruchi Rana</span></a>
-</li><li><a href="https://afsanapodcast.github.io/afsana/html/author_ss.html"><span class="title">Shishir Somvanshi</span></a>
-</li><li><a href="https://afsanapodcast.github.io/afsana/html/author_rs.html"><span class="title">Rahul Shabd</span></a>
-</li><li><a href="https://afsanapodcast.github.io/afsana/html/author_sr.html"><span class="title">Sandhya Rathore</span></a>
-</li><li><a href="https://afsanapodcast.github.io/afsana/html/author_sa.html"><span class="title">Syed Aatirah</span></a>
-</li><li><a href="https://afsanapodcast.github.io/afsana/html/author_mk.html"><span class="title">Mohammad Kausen</span></a>
-</li><li><a href="https://afsanapodcast.github.io/afsana/html/author_ap.html"><span class="title">Ajay Purohit</span></a>
-</li><li><a href="https://afsanapodcast.github.io/afsana/html/author_anon.html"><span class="title">Street sounds</span></a>
-</li><li><a href="https://afsanapodcast.github.io/afsana/html/language_hindi.html"><span class="title">Hindi stories</span></a>
-</li><li><a href="https://afsanapodcast.github.io/afsana/html/language_kashmiri.html"><span class="title">Kashmiri stories</span></a>
-</li><li><a href="https://afsanapodcast.github.io/afsana/html/instructions.html"><span class="title">Podcast instructions</span></a>
-</li><li><a href="https://afsanapodcast.github.io/afsana/html/instructions_quickBytes.html"><span class="title">Quick Bytes instructions</span></a>
-</li></ul></li></ul><!--<guid value="978d1735-297f-425a-b9c0-58b7837953fd" />--><!--Created using XmlSitemapGenerator.org - Free HTML, RSS and XML sitemap generator-->
+<ul>
+<li>
+<a href="https://afsanapodcast.github.io/afsana/"><span class="title">Afsana Podcast</span></a>
+<ul><li>Storytellers
+<ul>
+<li><a href="https://afsanapodcast.github.io/afsana/html/author_ab.html"><span class="title">Anindita Basu (Hindi)</span></a></li>
+<!--<li><a href="https://afsanapodcast.github.io/afsana/html/author_ap.html"><span class="title">Ajay Purohit (Hindi)</span></a></li>-->
+<li><a href="https://afsanapodcast.github.io/afsana/html/author_mk.html"><span class="title">Mohammad Kausen (Hindi)</span></a></li>
+<li><a href="https://afsanapodcast.github.io/afsana/html/author_pk.html"><span class="title">Preran Kumar (Hindi)</span></a></li>
+<li><a href="https://afsanapodcast.github.io/afsana/html/author_rs.html"><span class="title">Rahul Shabd (Hindi)</span></a></li>
+<li><a href="https://afsanapodcast.github.io/afsana/html/author_rr.html"><span class="title">Ruchi Rana (Hindi)</span></a></li>
+<li><a href="https://afsanapodcast.github.io/afsana/html/author_sr.html"><span class="title">Sandhya Rathore (Hindi)</span></a></li>
+<!--<li><a href="https://afsanapodcast.github.io/afsana/html/author_sp.html"><span class="title">Sarala Prakash (Kannada)</span></a></li>-->
+<!--<li><a href="https://afsanapodcast.github.io/afsana/html/author_sp2.html"><span class="title">Shankhadip Paria (Bengali/Bangla)</span></a></li>-->
+<li><a href="https://afsanapodcast.github.io/afsana/html/author_ss.html"><span class="title">Shishir Somvanshi (Hindi)</span></a></li>
+<li><a href="https://afsanapodcast.github.io/afsana/html/author_sa.html"><span class="title">Syed Aatirah (Kashmiri/Koshur)</span></a></li>
+</ul>
+</li></ul>
+<ul><li>Languages
+<ul>
+<!--<li><a href="https://afsanapodcast.github.io/afsana/html/language_bengali.html"><span class="title">Bengali stories</span></a></li>-->
+<li><a href="https://afsanapodcast.github.io/afsana/html/language_hindi.html"><span class="title">Hindi stories</span></a></li>
+<!--<li><a href="https://afsanapodcast.github.io/afsana/html/language_kannada.html"><span class="title">Kannada stories</span></a></li>-->
+<li><a href="https://afsanapodcast.github.io/afsana/html/language_kashmiri.html"><span class="title">Kashmiri stories</span></a></li>
+<li><a href="https://afsanapodcast.github.io/afsana/html/author_anon.html"><span class="title">Street sounds</span></a></li>
+</ul>
+</li></ul>
+<ul><li>Instructions
+<ul><li><a href="https://afsanapodcast.github.io/afsana/html/instructions.html"><span class="title">Podcast instructions</span></a></li>
+<li><a href="https://afsanapodcast.github.io/afsana/html/instructions_quickBytes.html"><span class="title">Quick Bytes instructions</span></a></li></ul>
+</li></ul>
+</li>
+</ul>
+<!--<guid value="978d1735-297f-425a-b9c0-58b7837953fd" />--><!--Created using XmlSitemapGenerator.org - Free HTML, RSS and XML sitemap generator-->
 
 
 
