--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ function myContrFunction() {
 
 <hr/>
 
-<p>Is not one's native tongue is the sweetest of all languages on earth? Come, then, and listen to a story in a native language &mdash; your language &mdash; of India.</p>
+<p>Is not one's native tongue is the sweetest of all languages on earth? Come, then, and listen to a story in a native language of India &mdash; your language. We have podcasts in Hindi, Kashmiri, Kannada, Bengali, ...</p>
 
 <p>Every Thursday, we upload an audio story written and narrated by ordinary people living ordinary lives but watching Life as it tells them stories. This earthiness of amateur voices, thinking and speaking in their mother tongues, is something that we hope will prevent us from being de-racinated.</p>
 
@@ -151,13 +151,20 @@ function myContrFunction() {
 </a>
 </div>
 
+<!--<div class="authorcard w3-center w3-round-large">
+<a href = "./html/author_ap.html" title = "Podcasts by Ajay Purohit" class = "anoline">
+<p>Ajay Purohit</p>
+<img src="./images/ap_small.png" class="w3-circle borderwhite" alt="Ajay Purohit"/>
+</a>
+</div>-->
+
 </div>
 
 <h3>Languages</h3>
 
 <div id = "languages" class = "w3-container">
 
-<p class = "w3-small"><a href = "./html/author_anon.html" class="w3-btn w3-white w3-round-jumbo border">Life </a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_hindi.html" class="w3-btn w3-white w3-round-jumbo border">Hindi </a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kashmiri.html" class="w3-btn w3-white w3-round-jumbo border">Kashmiri/Koshur </a></p>
+<p class = "w3-small"><a href = "./html/language_hindi.html" class="w3-btn w3-white w3-round-jumbo border">Hindi</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kashmiri.html" class="w3-btn w3-white w3-round-jumbo border">Kashmiri/Koshur</a><!--&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kannada.html" class="w3-btn w3-white w3-round-jumbo border">Kannada</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_bengali.html" class="w3-btn w3-white w3-round-jumbo border">Bengali/Bangla</a>-->&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/author_anon.html" class="w3-btn w3-white w3-round-jumbo border">Life</a></p>
 
 </div>
 
@@ -167,7 +174,7 @@ function myContrFunction() {
 
 <p class = "w3-small w3-right-align"><a href = "#ack" class="w3-btn w3-white w3-round-jumbo border">Acknowledgements</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "#contact" class="w3-btn w3-white w3-round-jumbo border">Contact</a></p>
 
-<p class = "w3-small">&copy;2016</p>
+<p class = "w3-small">&copy;2016&nbsp;&nbsp;<a href = "Sitemap.htm"/>Sitemap</a></p>
 
 </div>
 
