--- a/html/author_rr.html
+++ b/html/author_rr.html
@@ -34,7 +34,7 @@ $(function(){
 
 <header class = "w3-padding"><h2>Ruchi Rana</h2></header>
 
-<p><img src="../images/rr.png" class="w3-circle border"/>Ruchi Rana lives in Germany and belongs to Allahabad. She carries the tehzeeb of Ganga-Jamuna and Sangam in her being. She is passionate about music, books, and writing, and adores jhumkis and Banarasi stoles. She loves to cook, and to grow plants and flowers in all seasons.  Her day begins with Pt. Bhimsen Joshi's Bhairvi and ends with Begum Akhtar's ethereal baritone.  She is excited about Afsana Podcast and hopes it would be liked by all. </p>
+<p><img src="../images/rr.png" class="w3-circle border"/>Ruchi Rana lives in Germany and belongs to Allahabad. She carries the tehzeeb of Ganga-Jamuna and Sangam in her being. She is passionate about music, books, and writing, and adores jhumkis and Banarasi stoles. She loves to cook, and to grow plants and flowers in all seasons.  Her day begins with Pt. Bhimsen Joshi's Bhairvi and ends with Begum Akhtar's ethereal baritone.</p>
 
 <div class="w3-responsive">
 <table class="w3-table w3-bordered">
