--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -36,58 +36,58 @@ $(function(){
 
 <p>Trivia: Udaant Martand, published from Calcutta, was the first Hindi newspaper of India. It was born in 1826 and lived only for about 18 months. Calcutta's association with "firsts" in Hindi does not stop here, though. The very first gramophone record that was cut in India was in Hindi, and in the voice of Gauhar Jaan, a Calcutta courtesan.</p>
 
+<p class = "w3-small">
+<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Hindi%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1ZfCccD&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+
+<p>&nbsp;</p>
+
 <div class="w3-responsive">
-<table class="w3-table w3-bordered">
-<tr>
-  <td><p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Hindi%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1ZfCccD&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p></td>
-  <td><p>&nbsp;</p></td>
-</tr>
-<tr>
-  <td><p><img src="../images/pk_tiny.jpg" class="w3-circle borderwhite" alt="Preran Kumar"/>&nbsp;&nbsp;Ek safar (Preran Kumar)</p></td>
-  <td><p><audio src = "../mp3/pk_safar.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-<tr>
-  <td><p><img src="../images/rr_tiny.png" class="w3-circle borderwhite" alt="Ruchi Rana"/>&nbsp;&nbsp;Shukriya aye darakht (Ruchi Rana)</p></td>
-  <td><p><audio src = "../mp3/rr_darakht.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-<tr>
-  <td><p><img src="../images/ab_tiny.png" class="w3-circle borderwhite" alt="Anindita Basu"/>&nbsp;&nbsp;Tulsi ka ped (Anindita Basu)</p></td>
-  <td><p><audio src = "../mp3/ab_tulsi.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-<tr>
-  <td><p><img src="../images/ss_tiny.png" class="w3-circle borderwhite" alt="Shishir Somvanshi"/>&nbsp;&nbsp;Punarjanm (Shishir Somvanshi)</p></td>
-  <td><p><audio src = "../mp3/ss_punarjanm.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-<tr>
-  <td><p><img src="../images/rr_tiny.png" class="w3-circle borderwhite" alt="Ruchi Rana"/>&nbsp;&nbsp;Kaghaz ki khwahishein (Ruchi Rana)</p></td>
-  <td><p><audio src = "../mp3/rr_aas.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-<tr>
-  <td><p><img src="../images/rs_tiny.png" class="w3-circle borderwhite" alt="Rahul Shabd"/>&nbsp;&nbsp;Rachna (Rahul Shabd)</p></td>
-  <td><p><audio src = "../mp3/rs_rachna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-<tr>
-  <td><p><img src="../images/ab_tiny.png" class="w3-circle borderwhite" alt="Anindita Basu"/>&nbsp;&nbsp;Kallo rani (Anindita Basu)</p></td>
-  <td><p><audio src = "../mp3/ab_kallorani.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-<tr>
-  <td><p><img src="../images/sr_tiny.png" class="w3-circle borderwhite" alt="Sandhya Rathore"/>&nbsp;&nbsp;Baarish (Sandhya Rathore)</p></td>
-  <td><p><audio src = "../mp3/sr_barish.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-<tr>
-  <td><p><img src="../images/rs_tiny.png" class="w3-circle borderwhite" alt="Rahul Shabd"/>&nbsp;&nbsp;Beti ka byaah (Rahul Shabd)</p></td>
-  <td><p><audio src = "../mp3/rs_byah.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-<tr>
-  <td><p><img src="../images/rr_tiny.png" class="w3-circle borderwhite" alt="Ruchi Rana"/>&nbsp;&nbsp;Amit chhaap (Ruchi Rana)</p></td>
-  <td><p><audio src = "../mp3/rr_phagun.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-<tr>
-  <td><p><img src="../images/mk_tiny.png" class="w3-circle borderwhite" alt="Mohammad Kausen"/>&nbsp;&nbsp;Badchalan (Mohammad Kausen)</p></td>
-  <td><p><audio src = "../mp3/mk_badchalan.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-</table>
+
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p><img src="../images/pk_tiny.jpg" class="w3-circle borderwhite" alt="Preran Kumar"/>&nbsp;&nbsp;Ek safar (Preran Kumar)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/pk_safar.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p><img src="../images/rr_tiny.png" class="w3-circle borderwhite" alt="Ruchi Rana"/>&nbsp;&nbsp;Shukriya aye darakht (Ruchi Rana)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/rr_darakht.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p><img src="../images/ab_tiny.png" class="w3-circle borderwhite" alt="Anindita Basu"/>&nbsp;&nbsp;Tulsi ka ped (Anindita Basu)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/ab_tulsi.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p><img src="../images/ss_tiny.png" class="w3-circle borderwhite" alt="Shishir Somvanshi"/>&nbsp;&nbsp;Punarjanm (Shishir Somvanshi)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/ss_punarjanm.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p><img src="../images/rr_tiny.png" class="w3-circle borderwhite" alt="Ruchi Rana"/>&nbsp;&nbsp;Kaghaz ki khwahishein (Ruchi Rana)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/rr_aas.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p><img src="../images/rs_tiny.png" class="w3-circle borderwhite" alt="Rahul Shabd"/>&nbsp;&nbsp;Rachna (Rahul Shabd)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/rs_rachna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p><img src="../images/ab_tiny.png" class="w3-circle borderwhite" alt="Anindita Basu"/>&nbsp;&nbsp;Kallo rani (Anindita Basu)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/ab_kallorani.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p><img src="../images/sr_tiny.png" class="w3-circle borderwhite" alt="Sandhya Rathore"/>&nbsp;&nbsp;Baarish (Sandhya Rathore)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/sr_barish.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p><img src="../images/rs_tiny.png" class="w3-circle borderwhite" alt="Rahul Shabd"/>&nbsp;&nbsp;Beti ka byaah (Rahul Shabd)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/rs_byah.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p><img src="../images/rr_tiny.png" class="w3-circle borderwhite" alt="Ruchi Rana"/>&nbsp;&nbsp;Amit chhaap (Ruchi Rana)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/rr_phagun.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p><img src="../images/mk_tiny.png" class="w3-circle borderwhite" alt="Mohammad Kausen"/>&nbsp;&nbsp;Badchalan (Mohammad Kausen)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/mk_badchalan.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+
 </div>
 
 </div>
