--- a/html/language_bengali.html
+++ b/html/language_bengali.html
@@ -36,18 +36,18 @@ $(function(){
 
 <p>Trivia: Bengali is referred to as Bangla by its native speakers. It was the Bengali language movement, and the lives lost therefor, that led UNESCO to declare February 21 as International Mother Language Day.</p>
 
+<p class = "w3-small">
+<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Bengali%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1Ww9JJW&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+
+<p>&nbsp;</p>
+
 <div class="w3-responsive">
-<table class="w3-table w3-bordered">
-<tr>
-  <td><p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Bengali%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1Ww9JJW&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p></td>
-  <td><p>&nbsp;</p></td>
-</tr>
-<tr>
-  <td><p><img src="../images/sp2_tiny.png" class="w3-circle borderwhite" alt="Shankhadip Paria"/>&nbsp;&nbsp;Biye barir byakaran (Shankhadip Paria)</p></td>
-  <td><p><audio src = "../mp3/sp2_byakaran.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-</table>
+
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p><img src="../images/sp2_tiny.png" class="w3-circle borderwhite" alt="Shankhadip Paria"/>&nbsp;&nbsp;Biye barir byakaran (Shankhadip Paria)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/sp2_byakaran.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+
 </div>
 
 </div>
