--- a/html/language_bhojpuri.html
+++ b/html/language_bhojpuri.html
@@ -36,18 +36,18 @@ $(function(){
 
 <p>Trivia: Bhojpuri is one of the national languages of Fiji, Guyana, and Surinam. Its closest sisters are Magahi and Maithili. Although today it is written mostly in the Devnagari script, in earlier times, Bhojpuri used the <a href= "#kaithi">Kaithi script</a>.</p>
 
+<p class = "w3-small">
+<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Bhojpuri%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F22zDTTO&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+
+<p>&nbsp;</p>
+
 <div class="w3-responsive">
-<table class="w3-table w3-bordered">
-<tr>
-  <td><p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Bhojpuri%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F22zDTTO&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p></td>
-  <td><p>&nbsp;</p></td>
-</tr>
-<tr>
-  <td><p><img src="../images/ic_person_black_48dp_2x_tiny.png" class="w3-circle borderwhite" alt="Prabhakar Pandey"/>&nbsp;&nbsp;Aapan se joojhat maibhakha (Prabhakar Pandey)</p></td>
-  <td><p><audio src = "../mp3/sp2_byakaran.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-</table>
+
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p><img src="../images/ic_person_black_48dp_2x_tiny.png" class="w3-circle borderwhite" alt="Prabhakar Pandey"/>&nbsp;&nbsp;Aapan se joojhat maibhakha (Prabhakar Pandey)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/sp2_byakaran.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+
 </div>
 
 </div>
